test/fixtures/fixtures/type-error/i32.lys.ast.desugar
|-Document(0,11)
  |-(AstCons)
    |-VarDirective(0,11)
      |-(AstCons)
        |-NoModifier(0,0)
          <Rule0>
        |-VarDeclaration(0,11)
          |-(AstCons)
            |-NameIdentifier(4,7)
              |-Identifier=i32
            |-NumberLiteral=1
    |-EndOfFile=